# forward-custom-elements

engine/: MODELS.md  README.md
engine/android/: .gitignore  gradle.properties  gradlew  gradlew.bat  settings.gradle
engine/android/app/: build.gradle  proguard-rules.pro
engine/android/app/src/main/: AndroidManifest.xml
engine/android/app/src/main/cpp/: CMakeLists.txt  GameBridge.cpp
engine/android/app/src/main/cpp/engine/: Camera.cpp  Camera.h  GLTFLoader.cpp  GLTFLoader.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Terrain.cpp  Terrain.h
engine/android/app/src/main/cpp/game/: Enemy.cpp  Enemy.h  Entity.h  Warrior.cpp  Warrior.h  World.cpp  World.h
engine/android/app/src/main/cpp/math/: Mat4.h  Quaternion.h  Vec3.h
engine/android/app/src/main/kotlin/com/forwardfirst/mmorpg/: GameBridge.kt  GameSurfaceView.kt  HUDView.kt  MainActivity.kt  NetworkManager.kt
engine/android/app/src/main/res/values/: strings.xml
engine/android/app/src/main/res/xml/: network_security_config.xml
engine/server/: package-lock.json  package.json  server.js
engine/server/game/: Enemy.js  GameState.js  Player.js
